CMF 2.1.0-beta2 (unreleased)

  New Features

    - CMFCore.exportimport.skins: Added the ability to remove whole skin
      selections using a GS profile.
      (http://www.zope.org/Collectors/CMF/479)

    - Workflow definition instances now have a description field
      (http://www.zope.org/Collectors/CMF/480)

  Bug Fixes

    - CMFCore.TypesTool: Corrected method signature of all_meta_types to have
      an interface keyword argument, as per the underlying OFS.ObjectManager
      interface declaration.

    - SkinnableObjectManager: Changed the way skins are set up.
      Acquisition wrapping no longer triggers 'setupCurrentSkin'. This is now
      done on publishing traversal after the BeforeTraverseEvent triggers
      'setSite'. This fix replaces a temporary hack introduced in 2.1.0-beta,
      making sure ISkinsTool is looked up after setting the site.

    - CMFCore.CMFBTreeFolder: CMFBTreeFolders could not be used as the
      toplevel /Members container.
      (http://www.zope.org/Collectors/CMF/441)

    - Pass 'object' through to TypeInformation objects' 'listActions'.
      (http://www.zope.org/Collectors/CMF/482)
      
    - Removed extraneous "Cache" tab from FS-based skin objects.
      (http://www.zope.org/Collectors/CMF/343)

    - CMFCore.WorkflowTool: Using the '(Default)' keyword for a type's 
      workflow chain will now reset any custom workflow chains for the type.
      (http://www.zope.org/Collectors/CMF/475)

    - Use the property API to get the member specific skin, because
      direct attribute access won't work with PAS based membership.
      (http://dev.plone.org/plone/ticket/5904)

    - Add POST-only protections to security critical methods.
      http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2007-0240)

    - Allow customization from DirectoryViews to be redirected into
      alternate folders, and use manually-built clones.
      (http://www.zope.org/Collectors/CMF/382)

    - Use a utility, registered for