@@ -19,22 +19,42 @@ import unittest
 import Testing
 
 
+class DummyFolder(object):
+
+    def undoable_transactions(self, first_transaction=None,
+                              last_transaction=None,
+                              PrincipiaUndoBatchSize=None):
+        return ()
+
+
 class UndoToolTests(unittest.TestCase):
+
+    def _getTargetClass(self):
+        from Products.CMFCore.UndoTool import UndoTool
+
+        return UndoTool
+
+    def _makeOne(self, *args, **kw):
+        return self._getTargetClass()(*args, **kw)
 
     def test_z2interfaces(self):
         from Interface.Verify import verifyClass
         from Products.CMFCore.interfaces.portal_undo \
                 import portal_undo as IUndoTool
-        from Products.CMFCore.UndoTool import UndoTool
 
-        verifyClass(IUndoTool, UndoTool)
+        verifyClass(IUndoTool, self._getTargetClass())
 
     def test_z3interfaces(self):
         from zope.interface.verify import verifyClass
         from Products.CMFCore.interfaces import IUndoTool
-        from Products.CMFCore.UndoTool import UndoTool
 
-        verifyClass(IUndoTool, UndoTool)
+        verifyClass(IUndoTool, self._getTargetClass())
+
+    def test_listUndoableTransactionsFor(self):
+        udtool = self._makeOne()
+        obj = DummyFolder()
+        transactions = udtool.listUndoableTransactionsFor(obj)
+        self.assertEqual(transactions, ())
 
 
 def test_suite():
